# weaves

./: README.md
qdoc/: Makefile.am  configure.in
qdoc/cfg/: dev.doxy.in
qsys/: INSTALL  README  autogen.sh
qsys/smet/: INSTALL  Makefile.am  autogen.sh  config.h.in  configure.ac
qsys/smet/examples/: Makefile.am  egcrc.q  names.sh  names0.q  names1.q
qsys/smet/lib/: Makefile-safe.am  Makefile.am
qsys/smet/m4/: gnulib-cache-safe.m4  gnulib-cache.m4  gnulib-comp.m4
qsys/smet/mcast/: MCsrv.py  Makefile.am  README  mcast0.c  mcast0.h  mcast0.q  mcast0.sh  mcast00.sh  mcast01.c  mcast01.sh  mcast01t.q  mcast0t.c  multicast.c  multicast1.c
qsys/smet/regex/: Makefile.am  crc_t.c  crc_t.sh  egex.c  egex.q  egex1.sh  kish.c  smetrics.c
qsys/smet/test/: Makefile.am  egexm.c  mygrep.c
qsys/smet/time0/: Makefile.am  date0.c  date0.sh  date01.c  date01t.q  date0t.c  kish0.c  kish0.h  time0.c  time0.h  time0.q.in  time0.sh  time01.c  time01.sh  time01t.q  time0t.c
qsys/src/: Makefile.am  csvguess.q  darwin8.0.q  memo0.q  site.q  test0.q  trdrc.q  weaves.q
tools/: INSTALL  Makefile.am  aclocal.m4  config.h.in  configure
tools/doxygen0/: Makefile.am  R-sample1.R  mtoc.l  qoxygen.l  qoxygen2.l  rtoc.l  rtoc1.c  rtocc.l
tools/m4/: gnulib-cache.m4
